# pokemon-flask-api

./: .gitignore  README.md  main.py  pyproject.toml
baseModel/: source.txt
