[tool.poetry]
name = "keraspokemon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
keras = "^2.4.3"
pandas = "^1.2.0"
h5py = "2.10.0"
tensorflowjs = "^2.8.3"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
